--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -56,6 +56,7 @@ a {
 @import "_breadcrumb";
 @import "_browser";
 @import "_card";
+@import "_dropdown";
 @import "_helper";
 @import "_grid";
 @import "_label";
