--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -58,6 +58,7 @@ a {
 @import "_card";
 @import "_dropdown";
 @import "_helper";
+@import "_form";
 @import "_grid";
 @import "_label";
 @import "_typography";
