--- a/css/scss/_form.scss
+++ b/css/scss/_form.scss
@@ -1,157 +1,149 @@
-/* VARIABLES */
-html{
-	--form-bg: $default-bg;
-	--form-border-color: $color-gray-1;
-	--form-font-color: $default-font-color;
-	--form-font-color-placeholder: $color-gray-2;
+/* Variables */
+html {
+	--form-text-color: 36, 36, 36;
+	--form-border-color: 36, 36, 36;
 }
 
-html[data-theme='dark'] {
-	--form-bg: $default-bg-dark;
-	--form-border-color: $default-bg-dark;
-	--form-font-color: $default-font-color-dark;
-	--form-font-color-placeholder: $color-gray-3;
+html[data-theme="dark"] {
+	--form-text-color: 255, 255, 255;
+	--form-border-color: 243, 243, 243;
 }
 
-/* MIXIN */
-@mixin input($primaryColor){
-	border: 1px solid $primaryColor;
-	background-color: var(--form-bg);
-	
-	&:focus {
-		@include box-shadow($primaryColor 0 0 3px);
-	}
+/* Mixins */
+@mixin input($primaryColor) {
+	border: 2px solid $primaryColor;
+	background-color: var(--main-bg);
 }
 
-/* BASE */
-input[type='email'],
-input[type='number'],
-input[type='password'],
-input[type='search'],
-input[type='tel'],
-input[type='text'],
-input[type='url'],
-input[type='color'],
-input[type='date'],
-input[type='month'],
-input[type='week'],
-input[type='datetime'],
-input[type='range'],
-input[type='datetime-local'],
-input[type='file'],
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="url"],
+input[type="color"],
+input[type="date"],
+input[type="month"],
+input[type="week"],
+input[type="datetime"],
+input[type="range"],
+input[type="datetime-local"],
+input[type="file"],
 input:not([type]),
 textarea,
-select{
+select {
+	/* General */
 	display: inline-block;
 	width: 100%;
-	height: 2.3rem;
-	color: var(--form-font-color);
-	background-color: var(--form-bg);
-	border: 1px solid var(--form-border-color);
-	font-size: 1rem;
+	height: 40px;
+	appearance: none;
+	box-sizing: border-box;
 	box-shadow: none;
+
+	/* Font */
+	font-family: Inter, sans-serif;
+	color: var(--form-text-color);
+	font-size: 0.98rem;
+
+	/* Background */
+	background-color: var(--main-bg);
+
+	/* Border */
+	border: 2px solid rgba(var(--alert-bg-color), 0.3);
+	border-radius: 10px;
+
+	/* Margin */
+	margin: 0;
 	padding: 0 0.8rem;
-	@include box-sizing(border-box);
-	@include border-radius($default-border-radius);
-	@include appearance('none');
 
 	&::placeholder {
-		color: var(--form-font-color-placeholder);
-	}
-	
-	/* COLORS */
-	&.ms-info{
-		@include input($color-blue-1);
-	}
-	
-	&.ms-success{
-		@include input($color-green-1);
-	}
-	
-	&.ms-danger{
-		@include input($color-red-1);
-	}
-	
-	&.ms-warning{
-		@include input($color-yellow-1);
-	}
-	
-	/* GLOBAL */
-	&.ms-rounded{
-		@include border-radius(100px);
+		color: rgba(var(--alert-bg-color), 0.4);
 	}
 
-	&.ms-disabled{
+	/* Colors */
+	&.ms-primary {
+		@include input(rgba(var(--primary-bg-color), 1));
+	}
+
+	&.ms-secondary {
+		@include input(rgba(var(--secondary-bg-color), 1));
+	}
+
+	&.ms-action {
+		@include input(rgba(var(--action-bg-color), 1));
+	}
+
+	&.ms-action2 {
+		@include input(rgba(var(--action2-bg-color), 1));
+	}
+
+	/* Options */
+	&.ms-rounded {
+		border-radius: 50px;
+	}
+
+	&.ms-disabled {
 		cursor: not-allowed;
-		background-color: $color-gray-0;
-		border: 1px solid $color-gray-1;
 	}
 
-	/* SIZES */
-	&.ms-small{
-		height: 1.8rem;
+	/* Size */
+	&.ms-small {
+		height: 30px;
 	}
 
-	&.ms-medium{
-		height: 2.6rem;
+	&.ms-medium {
+		height: 50px;
 	}
 
-	&.ms-large{
-		height: 3rem;
+	&.ms-large {
+		height: 60px;
 	}
-	
-	/* EVENTS */
+
+	/* Events */
 	&:focus {
-		outline:0;
-		@include box-shadow($color-gray-2 0 0 3px);
+		outline: 0;
 	}
 }
 
-.ms-form-group{
+/* Form group */
+.ms-form-group {
 	margin-bottom: 1rem;
 
-	label, .ms-label{
+	label,
+	.ms-label {
 		display: block;
-		margin-bottom: .6rem;
-		font-size: 1rem;
+		margin-bottom: 0.6rem;
+		font-size: 0.9rem;
 	}
 
-	.ms-under-input{
+	.ms-under-input {
 		display: block;
 		font-size: 0.9rem;
 		margin-top: 0.4rem;
 	}
 }
 
-.ms-form-group-inline{
-	margin-bottom: 1rem;
-
-	input{
-		width: inherit;
-		display: inline-block;
-	}
-
-	label, .ms-label{
-		display: inline-block;
-		font-size: 1rem;
-		margin-top: 0.4rem;
-		min-width: 100px;
-	}
-}
-
-/* OVERDIDE */
-select{
+/* Overide */
+select {
 	min-width: 100px;
 	cursor: pointer;
-	background: var(--form-bg) url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' class='svg-inline--fa fa-sort-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z'%3E%3C/path%3E%3C/svg%3E") no-repeat right .5rem center/1rem 1rem;
+	background: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' class='svg-inline--fa fa-sort-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z'%3E%3C/path%3E%3C/svg%3E")
+		no-repeat right 0.5rem center/1rem 1rem;
 }
 
-textarea{
+textarea {
+	padding: 10px;
 	height: inherit;
 }
 
-input[disabled]{
+input[disabled] {
 	cursor: not-allowed;
 	background-color: var(--form-bg);
 	border: 1px solid var(--form-border-color);
+}
+
+input[type="file"] {
+	border: none;
+	padding: 0 0.5rem;
 }
