--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -52,8 +52,8 @@ a {
 }
 
 @import "_alert";
-@import "article";
-@import "avatar";
+@import "_article";
+@import "_avatar";
 @import "_breadcrumb";
 @import "_browser";
 @import "_button";
