--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -65,5 +65,6 @@ a {
 @import "_label";
 @import "_menu";
 @import "_pagination";
+@import "_progressbar";
 @import "_typography";
 @import "_user";
