--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -66,5 +66,6 @@ a {
 @import "_menu";
 @import "_pagination";
 @import "_progressbar";
+@import "_table";
 @import "_typography";
 @import "_user";
