--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -1,4 +1,3 @@
-/* Mixins */
 html {
 	--btn-text-color: 255, 255, 255;
 }
@@ -7,7 +6,6 @@ html[data-theme="dark"] {
 	--btn-text-color: 36, 36, 36;
 }
 
-/* Mixins */
 @mixin btn-default($backgroundColor, $textColor) {
 	background-color: $backgroundColor;
 	color: $textColor;
@@ -36,6 +34,7 @@ input[type="submit"] {
 	cursor: pointer;
 	display: inline-block;
 	box-sizing: border-box;
+	user-select: none;
 
 	/* Color */
 	background-color: rgba(var(--default-bg-color), 1);
@@ -210,4 +209,47 @@ button[disabled],
 .ms-disabled {
 	opacity: 0.5;
 	cursor: not-allowed;
+}
+
+.ms-btn-group {
+	display: inline-flex;
+	flex-wrap: wrap;
+
+	&.ms-fullwidth {
+		display: flex;
+
+		button,
+		.ms-btn,
+		input[type="button"],
+		input[type="submit"] {
+			flex: 1 0 0;
+		}
+	}
+
+	button,
+	.ms-btn,
+	input[type="button"],
+	input[type="submit"] {
+		&:first-child:not(:last-child) {
+			border-bottom-right-radius: 0;
+			border-top-right-radius: 0;
+
+			&.ms-outline {
+				border-right: 0px;
+			}
+		}
+
+		&:not(:first-child):not(:last-child) {
+			border-radius: 0;
+
+			&.ms-outline {
+				border-right: 0px;
+			}
+		}
+
+		&:last-child:not(:first-child) {
+			border-bottom-left-radius: 0;
+			border-top-left-radius: 0;
+		}
+	}
 }
