--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -41,6 +41,7 @@ body {
 	background-color: rgba(var(--main-bg), 1);
 	color: rgba(var(--main-text-color), 1);
 	font-family: Inter, sans-serif;
+	text-rendering: optimizeLegibility;
 	font-size: 0.97rem;
 	margin: 0;
 	padding: 0;
