--- a/css/scss/_dropdown.scss
+++ b/css/scss/_dropdown.scss
@@ -48,7 +48,7 @@
 			top: 100%;
 
 			/* Color */
-			background-color: rgba(var(--default-bg-color), 0.05);
+			background-color: rgba(var(--ligth-bg-color), 1);
 
 			/* Border */
 			border-radius: 10px;
