--- a/css/scss/_menu.scss
+++ b/css/scss/_menu.scss
@@ -10,7 +10,7 @@
 	text-align: center;
 
 	/* Color */
-	background-color: rgba(var(--default-bg-color), 0.03);
+	background-color: rgba(var(--ligth-bg-color), 1);
 
 	.ms-menu-logo {
 		/* General */
