--- a/css/scss/_avatar.scss
+++ b/css/scss/_avatar.scss
@@ -1,12 +1,3 @@
-/* Variables */
-html {
-	--avatar-bg-color: 36, 36, 36;
-}
-
-html[data-theme="dark"] {
-	--avatar-bg-color: 248, 248, 248;
-}
-
 @mixin sizeAvatar($font-size, $line-height, $width, $height) {
 	width: $width;
 	height: $height;
@@ -25,7 +16,7 @@ html[data-theme="dark"] {
 	position: relative;
 
 	/* Colors */
-	background-color: rgba(var(--avatar-bg-color), 0.2);
+	background-color: rgba(var(--ligth-bg-color), 1);
 
 	/* Border */
 	border-radius: 50%;
@@ -39,7 +30,7 @@ html[data-theme="dark"] {
 	padding: 0;
 
 	&.ms-border {
-		border: 3px solid rgba(var(--avatar-bg-color), 0.2);
+		border: 3px solid rgba(var(--default-border-color), 1);
 	}
 
 	img,
