--- a/css/scss/_breadcrumb.scss
+++ b/css/scss/_breadcrumb.scss
@@ -1,12 +1,3 @@
-/* Variables */
-html {
-	--breadcrumb-bg-color: 36, 36, 36;
-}
-
-html[data-theme="dark"] {
-	--breadcrumb-bg-color: 243, 243, 243;
-}
-
 .ms-breadcrumb {
 	/* Margin */
 	padding: 1rem;
@@ -26,6 +17,9 @@ html[data-theme="dark"] {
 
 			/* Color */
 			color: rgba(var(--main-text-color), 1);
+
+			/* Font */
+			font-weight: 500;
 
 			/* Margin */
 			margin: 0 0 0 0.5rem;
@@ -51,7 +45,7 @@ html[data-theme="dark"] {
 		width: 100%;
 
 		/* Color */
-		background-color: rgba(var(--default-bg-color), 0.1);
+		background-color: rgba(var(--ligth-bg-color), 1);
 
 		/* Border */
 		border-radius: 10px;
@@ -62,6 +56,6 @@ html[data-theme="dark"] {
 		width: 100%;
 
 		/* Border */
-		border-bottom: 2px solid rgba(var(--breadcrumb-bg-color), 0.3);
+		border-bottom: 2px solid rgba(var(--default-border-color), 1);
 	}
 }
