--- a/css/scss/_browser.scss
+++ b/css/scss/_browser.scss
@@ -1,15 +1,6 @@
-/* Variables */
-html {
-	--browser-bg-color: #f3f3f3;
-}
-
-html[data-theme="dark"] {
-	--browser-bg-color: #1d1e20;
-}
-
 .ms-browser {
-	background-color: var(--browser-bg-color);
-	border: 4px solid var(--browser-bg-color);
+	background-color: rgba(var(--ligth-bg-color), 1);
+	border: 4px solid rgba(var(--ligth-bg-color), 1);
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 
