--- a/css/scss/_form.scss
+++ b/css/scss/_form.scss
@@ -1,15 +1,3 @@
-/* Variables */
-html {
-	--form-text-color: 36, 36, 36;
-	--form-border-color: 36, 36, 36;
-}
-
-html[data-theme="dark"] {
-	--form-text-color: 255, 255, 255;
-	--form-border-color: 243, 243, 243;
-}
-
-/* Mixins */
 @mixin input($primaryColor) {
 	border: 2px solid $primaryColor;
 	background-color: var(--main-bg);
@@ -50,7 +38,7 @@ select {
 	background-color: rgba(var(--main-bg), 1);
 
 	/* Border */
-	border: 2px solid rgba(var(--alert-bg-color), 0.3);
+	border: 2px solid rgba(var(--default-border-color), 1);
 	border-radius: 10px;
 
 	/* Margin */
@@ -58,7 +46,7 @@ select {
 	padding: 0 0.8rem;
 
 	&::placeholder {
-		color: rgba(var(--alert-bg-color), 0.4);
+		color: rgba(var(--light-text-color), 1);
 	}
 
 	/* Colors */
