--- a/css/scss/_pagination.scss
+++ b/css/scss/_pagination.scss
@@ -1,19 +1,24 @@
 .ms-pagination {
 	margin: 1rem 0;
+	padding: 0;
 
 	ul {
 		list-style: none;
 		display: flex;
+		justify-content: center;
+		align-self: center;
 		margin: 0;
+		padding: 0;
 
 		li {
 			list-style: none;
 			margin: 0;
+			padding: 0;
 
 			a {
 				padding: 0.5rem;
 				text-decoration: none;
-				color: rgba(var(--alert-text-color), 1);
+				color: rgba(var(--main-text-color), 1);
 				border-radius: 10px;
 
 				&.ms-active {
@@ -28,21 +33,21 @@
 				&.ms-disabled {
 					cursor: default;
 					pointer-events: none;
-					color: rgba(var(--main-text-color), 0.5);
+					color: rgba(var(--light-text-color), 1);
 				}
 
 				&:hover {
-					background-color: rgba(var(--default-bg-color), 0.1);
+					background-color: rgba(var(--ligth-bg-color), 1);
 				}
 
 				&:active {
-					background-color: rgba(var(--default-bg-color), 0.2);
+					background-color: rgba(var(--ligth-bg-color), 0.5);
 				}
 			}
 
 			span {
 				padding: 0.5rem;
-				color: rgba(var(--main-text-color), 0.5);
+				color: rgba(var(--light-text-color), 1);
 			}
 		}
 	}
@@ -63,7 +68,7 @@
 				}
 
 				a {
-					border: 2px solid rgba(var(--alert-bg-color), 0.2);
+					border: 2px solid rgba(var(--default-border-color), 1);
 					border-radius: 0px;
 
 					&.ms-active {
@@ -72,7 +77,7 @@
 				}
 
 				span {
-					border: 2px solid rgba(var(--alert-bg-color), 0.3);
+					border: 2px solid rgba(var(--light-text-color), 1);
 				}
 			}
 		}
