--- a/css/scss/_table.scss
+++ b/css/scss/_table.scss
@@ -7,13 +7,13 @@ table,
 
 	thead {
 		text-align: left;
-		border-bottom: 3px solid rgba(var(--alert-bg-color), 0.1);
+		border-bottom: 3px solid rgba(var(--default-border-color), 1);
 	}
 
 	td,
 	th {
 		padding: 0.8rem 0.4rem;
-		border-bottom: 2px solid rgba(var(--alert-bg-color), 0.1);
+		border-bottom: 2px solid rgba(var(--default-border-color), 0.3);
 	}
 
 	th {
@@ -28,7 +28,7 @@ table,
 
 		tbody {
 			tr:nth-of-type(odd) {
-				background: rgba(var(--alert-bg-color), 0.05);
+				background: rgba(var(--ligth-bg-color), 1);
 			}
 		}
 	}
