SCSS Reorganization, Loading
- SCSS Reorganization.
- Added loader element.

--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -60,22 +60,23 @@ a {
 	text-decoration: none;
 }
 
-@import "_alert";
-@import "_article";
-@import "_avatar";
-@import "_breadcrumb";
-@import "_browser";
-@import "_button";
-@import "_card";
-@import "_dropdown";
-@import "_form";
-@import "_grid";
-@import "_helper";
-@import "_label";
-@import "_menu";
-@import "_pagination";
-@import "_progressbar";
-@import "_tab";
-@import "_table";
-@import "_typography";
-@import "_user";
+@import "elements/_alert";
+@import "components/_article";
+@import "components/_avatar";
+@import "components/_breadcrumb";
+@import "components/_browser";
+@import "elements/_button";
+@import "components/_card";
+@import "elements/_dropdown";
+@import "contents/_form";
+@import "layout/_grid";
+@import "helpers/_helper";
+@import "elements/_label";
+@import "components/_loading";
+@import "components/_menu";
+@import "components/_pagination";
+@import "elements/_progressbar";
+@import "components/_tab";
+@import "contents/_table";
+@import "contents/_typography";
+@import "components/_user";
