--- a/css/scss/helpers/_helper.scss
+++ b/css/scss/helpers/_helper.scss
@@ -253,6 +253,15 @@
 	display: flex !important;
 }
 
+/* Box Shadow */
+.ms-box-shadow {
+	box-shadow: rgba(10, 10, 10, 0.1) 0px 8px 16px -2px,
+		rgba(10, 10, 10, 0) 0px 0px 0px 1px !important;
+}
+.ms-box-shadow-none {
+	box-shadow: none !important;
+}
+
 /* FlexBox */
 .ms-flex-direction-row {
 	flex-direction: row !important;
