--- a/css/scss/elements/_button.scss
+++ b/css/scss/elements/_button.scss
@@ -212,6 +212,11 @@ input[type="submit"] {
 			box-shadow: none;
 		}
 	}
+
+	/* Loading */
+	.ms-loading {
+		border-color: red;
+	}
 }
 
 button[disabled],
