--- a/css/scss/components/_loading.scss
+++ b/css/scss/components/_loading.scss
@@ -1,61 +1,64 @@
 .ms-loading {
-	display: block;
-	position: relative;
-	margin: 20px 0;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	border: 5px solid rgba(var(--ligth-bg-color), 1);
+	border-top: 5px solid rgba(var(--default-bg-color), 1);
+	-webkit-animation: spin 0.5s linear infinite;
+	animation: spin 0.5s linear infinite;
 
-	.ms-loading-circle {
-		position: absolute;
-		width: 13px;
-		height: 13px;
-		border-radius: 50%;
-		background-color: rgba(var(--main-text-color), 1);
-		animation-timing-function: cubic-bezier(0, 1, 1, 0);
+	&.ms-small {
+		width: 15px;
+		height: 15px;
+		border: 3px solid rgba(var(--ligth-bg-color), 1);
+		border-top: 3px solid rgba(var(--default-bg-color), 1);
+	}
 
-		&:nth-child(1) {
-			left: 8px;
-			animation: ms-loading1 0.6s infinite;
-		}
+	&.ms-medium {
+		width: 50px;
+		height: 50px;
+		border: 8px solid rgba(var(--ligth-bg-color), 1);
+		border-top: 8px solid rgba(var(--default-bg-color), 1);
+	}
 
-		&:nth-child(2) {
-			left: 8px;
-			animation: ms-loading2 0.6s infinite;
-		}
+	&.ms-large {
+		width: 75px;
+		height: 75px;
+		border: 10px solid rgba(var(--ligth-bg-color), 1);
+		border-top: 10px solid rgba(var(--default-bg-color), 1);
+	}
 
-		&:nth-child(3) {
-			left: 32px;
-			animation: ms-loading2 0.6s infinite;
-		}
+	&.ms-primary {
+		border-top-color: rgba(var(--primary-bg-color), 1);
+	}
 
-		&:nth-child(4) {
-			left: 56px;
-			animation: ms-loading3 0.6s infinite;
-		}
+	&.ms-secondary {
+		border-top-color: rgba(var(--secondary-bg-color), 1);
+	}
+
+	&.ms-action {
+		border-top-color: rgba(var(--action-bg-color), 1);
+	}
+
+	&.ms-action2 {
+		border-top-color: rgba(var(--action2-bg-color), 1);
 	}
 }
 
-@keyframes ms-loading1 {
+@-webkit-keyframes spin {
 	0% {
-		transform: scale(0);
+		-webkit-transform: rotate(0deg);
 	}
 	100% {
-		transform: scale(1);
+		-webkit-transform: rotate(360deg);
 	}
 }
 
-@keyframes ms-loading2 {
+@keyframes spin {
 	0% {
-		transform: translate(0, 0);
+		transform: rotate(0deg);
 	}
 	100% {
-		transform: translate(24px, 0);
-	}
-}
-
-@keyframes ms-loading3 {
-	0% {
-		transform: scale(1);
-	}
-	100% {
-		transform: scale(0);
+		transform: rotate(360deg);
 	}
 }
