--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -68,9 +68,11 @@ a {
 @import "elements/_button";
 @import "components/_card";
 @import "elements/_dropdown";
+@import "layout/_footer";
 @import "contents/_form";
 @import "layout/_grid";
 @import "helpers/_helper";
+@import "layout/_hero";
 @import "elements/_label";
 @import "components/_loading";
 @import "components/_menu";
