--- a/css/scss/components/_menu.scss
+++ b/css/scss/components/_menu.scss
@@ -1,6 +1,5 @@
 .ms-menu {
 	/* General */
-	position: relative;
 	z-index: 999;
 	width: 100%;
 	height: 50px;
@@ -15,7 +14,7 @@
 	.ms-menu-logo {
 		/* General */
 		width: auto;
-		height: 100%;
+		height: 50px;
 		float: left;
 
 		/* Colors */
@@ -97,7 +96,8 @@
 @media screen and (max-width: 768px) {
 	.ms-menu {
 		.ms-menu-link {
-			background-color: rgba(var(--main-bg), 1);
+			z-index: 999;
+			background-color: rgba(var(--ligth-bg-color), 1);
 			width: 100%;
 			height: auto;
 			margin: 0;
@@ -109,7 +109,6 @@
 				overflow: hidden;
 				transition: max-height 0.3s;
 				margin: 0;
-				padding: 10px;
 
 				li {
 					text-align: left;
